--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -23,11 +23,14 @@
                 <li class="nav-item mx-2">
                     <a class="nav-link text-white" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item mx-2">
+                {% comment %} <li class="nav-item mx-2">
                     <a class="nav-link text-white" href="{% url 'reader_home_page'%}">Reader Community</a>
                 </li>
                 <li class="nav-item mx-2">
                     <a class="nav-link text-white" href="{% url 'writer_home_page'%}">Writer Community</a>
+                </li> {% endcomment %}
+                <li class="nav-item mx-2">
+                    <input type="search" class="nav-link" placeholder="Search">
                 </li>
                 <li class="nav-item mx-2">
                     <a class="nav-link text-white" href="{% url 'about_us' %}">About Us</a>
@@ -178,7 +181,7 @@
                 <div class="card" style="width: 18rem;">
                 <img src="https://img.freepik.com/premium-photo/chibistyle-3dbrazilian-student-using-backpack-shirt-pants-holding-notebook_862994-60829.jpg?semt=ais_hybrid" class="card-img-top" alt="Atlas Smith">
                 <div class="card-body">
-                    <h5 class="card-title">Atlas Smith</h5>
+                    <h5 class="card-title">Yazan Jaloudi</h5>
                     <p class="card-text">'If you only read the books that everyone else is reading, you can only think what everyone else is thinking. Go ahead and start your reading or writing journy too. You will enjoy every moment here. Specially the clubs and the book events. Let's read and discuss books together.<br>🖊️📖✏️📚 </p>
                     <a href="#" class="btn btn-dark custom-button">Go somewhere</a>
                 </div>
@@ -188,7 +191,7 @@
                 <div class="card" style="width: 18rem;">
                 <img src="https://img.freepik.com/free-photo/3d-illustration-cute-little-girl-with-green-jacket_1142-42111.jpg?semt=ais_hybrid"  class="card-img-top" alt="Mark Williams">
                 <div class="card-body">
-                    <h5 class="card-title">Emily Miller</h5>
+                    <h5 class="card-title">Renad Barakat</h5>
                     <p class="card-text">'I declare after all there is no enjoyment like reading! How much sooner one tires of anything than of a book. When I have a house of my own, I shall be miserable if I have not an excellent library. This website provided everything I needed for reading. Highly recommended.<br><br> 🌸🎀🦩💕🌷'</p>
                     <a href="#" class="btn btn-dark custom-button">Go somewhere</a>
                 </div>
@@ -198,7 +201,7 @@
                 <div class="card" style="width: 18rem;">
                 <img src="https://img.freepik.com/free-photo/3d-rendering-cute-little-boy-street-night_1142-51101.jpg?semt=ais_hybrid" class="card-img-top" alt="Emilly Miller">
                 <div class="card-body">
-                    <h5 class="card-title">Mark Williams</h5>
+                    <h5 class="card-title">Fouad Abu Sarari</h5>
                     <p class="card-text">'The best moments in reading are when you come across something – a thought, a feeling, a way of looking at things – which you had thought special and particular to you. Now here it is, set down by someone else, a person you have never met, someone even who is long dead. And it is as if a hand has come out and taken yours.🤗💖'</p>
                     <a href="#" class="btn btn-dark custom-button">Go somewhere</a>
                 </div>
