--- a/templates/ViewBookPage.html
+++ b/templates/ViewBookPage.html
@@ -86,7 +86,7 @@
                 <p>book description</p>
                 <p>Author: John Doe</p>
                 <p>Genre: Fiction</p>
-              <a href="#" class="btn">Read More </a>
+                <a href="#" class="btn">Read More </a>
             </div>
         </div>
     </div>
@@ -94,11 +94,10 @@
         <!-- Book Details Section -->
         <div class="book-details">
             <h2>Book Details:</h2>
-            <p><strong>Title:</strong> Book Title</p>
-            <p><strong>Genre:</strong> Drama</p>
-            <p><strong>Author:</strong> Author Name</p>
-            <p><strong>Description:</strong></p>
-            <p>Book by ...</p>
+            <p><strong>Title:</strong>{{book.title}}</p>
+            <p><strong>Genre:</strong> {{book.genre}}</p>
+            {% comment %} <p><strong>Author:</strong> {{user.first_name}} {{user.last_name}}</p> {% endcomment %}
+            <p><strong>Description:</strong>{{book.description}}</p>
         </div>
     </div>
 
