--- a/static/css/ViewBookDetails.css
+++ b/static/css/ViewBookDetails.css
@@ -10,8 +10,8 @@
 
 .book-details {
     max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
+    height: 400px;    margin: 20px auto;
+    padding: 50px;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
